# Liste-Electorale

./: Makefile  Makefile.am  Makefile.in  README.md  callbacks.c  callbacks.h  condidat.txt  interface.c  interface.c.bak  interface.h.bak  le  listeelecorale.txt  listeelectorale.c  listeelectorale.h  listeelectoraletriee.txt  main.c  utilisateur.txt
